Fixed button style on ios

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
 }
 
 #buttons > input {
+  -webkit-appearance: none;
   border: 0;
   border-radius: 32px;
   font-size: 24px;
